# pollEngine

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
adapter/: CMakeLists.txt
adapter/inc/: adapter.hpp
adapter/src/: adapter.cpp
app/: CMakeLists.txt
app/inc/: app.hpp
app/src/: app.cpp
common/: CMakeLists.txt
common/inc/: common.hpp  netutils.hpp
common/src/: common.cpp  netutils.cpp
core/: CMakeLists.txt
core/inc/: pollEngine.hpp
core/src/: pollEngine.cpp
testApp/: CMakeLists.txt
testApp/inc/: myapp.hpp
testApp/src/: main.cpp  myapp.cpp
